--- a/lec-1/index.html
+++ b/lec-1/index.html
@@ -13,6 +13,15 @@
         <H5>H1: HTML Masterclass</H5>
         <H6>H1: HTML Masterclass</H6>
         <P>I Hate You!</P>
+        <p>Choose your interests:</p>
+        <form>
+            <label for="s1">Select currency:</label>
+            <select name="currency" id="s1">
+              <option>Euro</option>
+              <option>US Dollar</option>
+            </select>
+          </form>
+            
  
     </body>
 </html>
